Change first() calls to get(0) calls